k3s/telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-deployment
spec:
  selector:
    matchLabels:
      app: telegraf
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
        - image: telegraf
          name: telegraf
          volumeMounts:
            - mountPath: /etc/telegraf/telegraf.conf
              name: telegraf-config
              subPath: telegraf.conf
              readOnly: true
      volumes:
        - name: telegraf-config
          configMap:
            name: telegraf-config
