k3s/influx.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8086
    targetPort: 8086
  selector:
    app: influxdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - image: influxdb
        name: influxdb
        ports:
        - containerPort: 8086
        volumeMounts:
          - mountPath: /var/lib/influxdb
            name: influxdb-data
          - mountPath: /etc/influxdb/influxdb.conf
            name: influxdb-config
            subPath: influxdb.conf
            readOnly: true
      volumes:
      - name: influxdb-data
        persistentVolumeClaim:
          claimName: influxdb-data
      - name: influxdb-config
        configMap:
          name: influxdb-config
