k3s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - mqtt.exampe.com
    secretName: letsencrypt-prod
  rules:
  - host: mqtt.exampe.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
  - host: mqtt.exampe.com
    http:
      paths:
      - backend:
          serviceName: mosquitto
          servicePort: 1883
